--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Kids Education</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header></header>
+<body id="background" class="quicksand-font">
+    <header>
+        <nav class="navbar">
+            <div class="school">
+                <img src="assets/logo.png" alt="">
+                <h3>SCHOOL</h3>
+            </div>
+            <ul class="nav-links">
+                <li class="nav-item">Home</li>
+                <li class="nav-item">About</li>
+                <li class="nav-item">Facilities</li>
+                <li class="nav-item">Admission</li>
+            </ul>
+            <button class="contact">Contact</button>
+        </nav>
+    </header>
 
     <main></main>
 
