--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids Education</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body id="background" class="quicksand-font">
     <header>
         <nav class="navbar">
@@ -14,12 +16,17 @@
                 <h3>SCHOOL</h3>
             </div>
             <ul class="nav-links">
-                <li class="nav-item">Home</li>
-                <li class="nav-item">About</li>
-                <li class="nav-item">Facilities</li>
-                <li class="nav-item">Admission</li>
+                <li id="nav-home" class="nav-item">Home</li>
+                <li id="nav-about" class="nav-item">About</li>
+                <li id="nav-facilities" class="nav-item">Facilities</li>
+                <li id="nav-admission" class="nav-item">Admission</li>
             </ul>
             <button class="contact">Contact</button>
+            <button class="hamburger">
+                <div class="ham"></div>
+                <div class="ham"></div>
+                <div class="ham"></div>
+            </button>
         </nav>
     </header>
 
@@ -27,4 +34,5 @@
 
     <footer></footer>
 </body>
+
 </html>
