desktop banner done

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav class="navbar">
             <div class="school">
-                <img src="assets/logo.png" alt="">
-                <h3>SCHOOL</h3>
+                <img src="assets/logo.png" alt="" class="school-logo">
+                <h3 class="school-name">SCHOOL</h3>
             </div>
             <ul class="nav-links">
                 <li id="nav-home" class="nav-item">Home</li>
@@ -28,6 +28,20 @@
                 <div class="ham"></div>
             </button>
         </nav>
+
+        <section class="banner">
+            <div class="banner-content">
+                <h2>
+                    <span class="emp">Empowering</span><br> students from small<br>age <span class="vision">towards
+                        vision</span>
+                </h2>
+                <p>With the courage, Confidence, Creativity and Compassion to make<br>their Unique Contribution in a
+                    Diverse and Dynamic
+                    World.</p>
+                <button class="enroll">Enroll Now</button>
+            </div>
+            <img src="assets/hero-kids.png" alt="">
+        </section>
     </header>
 
     <main></main>
