mobile-screen banner done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span class="emp">Empowering</span><br> students from small<br>age <span class="vision">towards
                         vision</span>
                 </h2>
-                <p>With the courage, Confidence, Creativity and Compassion to make<br>their Unique Contribution in a
+                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
                     Diverse and Dynamic
                     World.</p>
                 <button class="enroll">Enroll Now</button>
