--- a/index.html
+++ b/index.html
@@ -44,7 +44,34 @@
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <section class="curriculum">
+            <h2>Standard Curriculum</h2>
+            <div class="curriculum-cards">
+                <div id="cur-blu" class="card">
+                    <img src="assets/kinder.png" alt="">
+                    <h3>Kinder (3-6) Years</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis
+                        parturient</p>
+                    <a class="anc-blu" href="">Read More</a>
+                </div>
+                <div id="cur-yel" class="card">
+                    <img src="assets/elementary.png" alt="">
+                    <h3>Elementary School</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis
+                        parturient</p>
+                    <a class="anc-yel" href="">Read More</a>
+                </div>
+                <div id="cur-pur" class="card">
+                    <img src="assets/middle.png" alt="">
+                    <h3>Middle (10-16) Years</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis
+                        parturient</p>
+                    <a class="anc-pur" href="">Read More</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
