story section added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,48 @@
                 </div>
             </div>
         </section>
+
+        <section class="arrow">
+            <button class="arrow-cont"><</button>
+            <button class="arrow-cont">></button>
+        </section>
+
+        <section class="story">
+            <h1>Our Stories</h1>
+            <div class="story-content">
+                <div class="story1">
+                    <img src="assets/story-1.png" alt="">
+                    <button class="date1">November 19, 2019</button>
+                    <h3>A fun toddler coloring training on classroom</h3>
+                    <p>Beautiful branding for changes by Never Now in Australia. changes is a platform for open
+                        discussion
+                        in an inclusive and
+                        collaborative environment, providing the...</p>
+                </div>
+                <div class="story-rest">
+                    <div class="story-r">
+                        <img src="assets/story-2.png" alt="">
+                        <button class="date_r">November 19, 2019</button>
+                        <h4>Find out if a school fits the family’s needs</h3>
+                    </div>
+                    <div class="story-r">
+                        <img src="assets/story-3.png" alt="">
+                        <button id="date2" class="date_r">November 19, 2019</button>
+                        <h4>Summer math & literacy centres for kids</h3>
+                    </div>
+                    <div class="story-r">
+                        <img src="assets/story-4.png" alt="">
+                        <button class="date_r">September 10, 2019</button>
+                        <h4>Classroom management techniques for new tutors</h3>
+                    </div>
+                    <div class="story-r">
+                        <img src="assets/story-5.png" alt="">
+                        <button class="date_r">July 19, 2019</button>
+                        <h4>Conversation rhymes improve kids listening</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
