--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
     <main>
         <section class="curriculum">
+            <div class="marq">
+                <marquee width="100%" direction="left" height="30px">
+                    The greatest glory in living lies not in never falling, but in rising every time we fall." - Nelson
+                    Mandela
+                </marquee>
+            </div>
             <h2>Standard Curriculum</h2>
             <div class="curriculum-cards">
                 <div id="cur-blu" class="card">
@@ -112,10 +118,45 @@
                     </div>
                 </div>
             </div>
+            <div class="story-view">
+                <button class="enroll">
+                    View All
+                </button>
+            </div>
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <section class="foot">
+            <div class="education">
+                <div class="ed-head">
+                    <img src="assets/logo2.png" alt="">
+                    <h2>Kids<br>Education</h2>
+                </div>
+                <div class="ed-p">
+                    <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple
+                        Aussie. Mayo rib sauce
+                        Hawaiian meatball.</p>
+                </div>
+            </div>
+            <div class="about">
+                <h3>About School</h3>
+                <p>Home</p>
+                <p>About</p>
+                <p>Facilities</p>
+                <p>Admission</p>
+            </div>
+            <div class="touch">
+                <h3>Keep In Touch</h3>
+                <div class="social">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
